--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.8",
+    "geist": "^1.3.1",
     "lucide-react": "^0.344.0",
     "next": "14.1.2",
     "react": "^18",
